--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="flex-parent">
     <div class="container">
-      <img src="./images/image-qr-code.png" alt="image-qr-code">
+      <img src="./image-qr-code.png" alt="image-qr-code">
       <h3 id="headingone">
         Improve your front-end skills by building projects
       </h3>
