--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="flex-parent">
-    <div class="container">
+    <div>
       <img src="./image-qr-code.png" alt="image-qr-code">
       <h3 id="headingone">
         Improve your front-end skills by building projects
